style for NewTodo and MainContent components

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@
     --clr-dt-darkest-grayish-blue: hsl(237, 14%, 26%);
 
     /* typography */
+    --fs-s: 0.95rem;
     --fs-m: 1.125rem;
     --fs-l: 1.2rem;
     --ff-primary: "Josefin Sans", sans-serif;
